<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="defaultMainTitle">当前没有定时器</string>
    <string name="app_name">MagicTimer</string>

    <string name="app_label">闹钟</string>
    <string name="add_alarm">添加闹钟</string>
    <string name="delete_alarm">取消闹钟</string>
    <string name="enable_alarm">启用闹钟</string>
    <string name="disable_alarm">停用闹钟</string>
    <string name="delete_alarm_confirm">将会取消此闹钟。</string>
    <string name="show_clock">显示时钟</string>
    <string name="hide_clock">隐藏时钟</string>
    <string name="label">标签</string>
    <string name="default_label">闹钟</string>
    <string name="set_alarm">设置闹钟</string>
    <string name="alarm_vibrate">振动</string>
    <string name="alarm_repeat">重复</string>
    <string name="alert">铃声</string>
    <string name="time">时间</string>
    <string name="alarm_alert_dismiss_text">我知道了</string>
    <string name="alarm_alert_alert_silenced">闹钟响了 %d 分钟后停止</string>
    <string name="alarm_alert_snooze_text">稍后再响</string>
    <string name="alarm_alert_snooze_set">暂停 %d 分钟后再响。</string>
    <string name="day">1 天</string>
    <string name="days">%s 天</string>
    <string name="hour">1 小时</string>
    <string name="hours">%s 小时</string>
    <string name="minute">1 分钟</string>
    <string name="minutes">%s 分钟</string>
    <string name="every_day">每天</string>
    <string name="never">永不</string>
    <string name="day_concat">"、 "</string>
    <string name="clock_instructions">选择要显示的时钟。</string>
    <string name="analog_gadget">模拟时钟</string>
    <string name="settings">设置</string>
    <string name="alarm_in_silent_mode_title">静音模式下闹钟响</string>
    <string name="alarm_in_silent_mode_summary">手机处于静音模式时，闹钟仍会响</string>
    <string name="snooze_duration_title">再响间隔</string>
    <string name="done">完成</string>
    <string name="revert">还原</string>
    <string name="alarm_volume_title">闹钟音量</string>
    <string name="alarm_volume_summary">设置闹钟音量</string>
    <string name="silent_alarm_summary">静音</string>
    <string name="alarm_notify_text">选择暂停或关闭此闹钟。</string>
    <string name="alarm_notify_snooze_label">%s（已暂停）</string>
    <string name="alarm_notify_snooze_text">已将此闹钟设置在 %s启动。选择即可取消。</string>
    <string name="volume_button_setting_title">侧边按钮功用</string>
    <string name="volume_button_setting_summary">设置侧边按钮在闹钟启动时的功用</string>
</resources>